[tool.poetry]
name = "cheery"
version = "0.1.0"
description = "Minimal central WebSocket relay for decentralized chat"
authors = ["harry <harshitsingh50621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^13.1"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
